# RouteFlow

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
aegis/: __init__.py  main.py
aegis/api/: __init__.py  control_center.py  health.py  messages.py  middleware.py  models.py  router.py
aegis/auth/: __init__.py  guards.py  tokens.py
aegis/config/: __init__.py  settings.py
aegis/core/: __init__.py  errors.py  logging.py  schemas.py
aegis/persistence/: __init__.py  db.py  migrations.py  models.py  repositories.py
aegis/providers/: __init__.py  base.py  nvidia.py  pool.py
aegis/runtime/: __init__.py  health.py  retry.py  router.py  scheduler.py
aegis/stream/: __init__.py  encoder.py  events.py  normalizer.py  sse.py
aegis/translator/: __init__.py  request.py  response.py
aegis/ui/: __init__.py  index.html
aegis/utils/: __init__.py
md files/: AGENTS.md  API_SPEC.md  ARCHITECTURE.md  CODING_STANDARDS.md  CONTROL_CENTER_API.md  DATABASE_SCHEMA.md  ENVIRONMENT_REFERENCE.md  FILE_STRUCTURE.md  IMPLEMENTATION_PLAN.md  MODEL_MAPPING.md  NVIDIA_NIM_REFERENCE.md  PROJECT_CONTEXT.md  README.md  SECURITY.md  STARTUP_AND_SHUTDOWN_FLOW.md  TESTING_STRATEGY.md  UI_GUIDELINES.md
routeflow/: __init__.py  main.py
routeflow/api/: __init__.py  control_center.py  health.py  messages.py  (+3 more)
tests/: __init__.py  conftest.py  test_auth.py  test_config.py  test_control_center.py  test_health.py  test_messages.py  test_persistence.py  test_provider_nvidia.py  test_runtime.py  test_schemas.py  test_stream.py  test_translator.py  test_ui.py
(+42 files in other folders)
